# micropython-active-buzzer

./: .copier-answers.yml  .gitignore  README.md  boot.py  micropython-active-buzzer.code-workspace  pyproject.toml
config/: board.py
core/: tmb12a05.py
